feat(settings): add organization management
